test/Fail/PatternSynonymOverloaded.err
PatternSynonymOverloaded.agda:11.6-10: error: [CannotResolveAmbiguousPatternSynonym]
Cannot resolve overloaded pattern synonym ss, since candidates have
different shapes:
  pattern ss x = suc (suc x)
    at PatternSynonymOverloaded.agda:7.9-11
  pattern ss x = suc x
    at PatternSynonymOverloaded.agda:8.9-11
(hint: overloaded pattern synonyms must be equal up to variable and
constructor names)
when checking that the clause foo (ss n) = n has type Nat → Nat
